Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5765

rerouting messages to non-local filtered queue crashes broker

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.28
    • 0.29
    • C++ Broker
    • None

    Description

      If you have a queue with messages on it published by a connection that no longer exists, and you re-route these for whatever reason through an exchange with a queue bound that has the no-local filtering enabled, the broker will crash.

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: