QPID-5765: don't invoke on dangling pointer

Strictly speaking comparing anything against the old pointer isn't correct either,
but this is harder to change and the only negative effect is that in the event that
a new connection has the same pointer value, it would be incorrectly interpreted
as 'local'.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1594633 13f79535-47bb-0310-9956-ffa450edef68